fix horizontal scroll

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -11,3 +11,7 @@ html {
 .heading {
   font-family: 'Nunito', sans-serif;
 }
+
+html {
+  scroll-behavior: smooth;
+}
